# AstroOptimisationProblems

./: .gitignore  CMakeLists.txt  README.md
src/: Astro_Functions.cpp  Astro_Functions.h  Lambert.cpp  Pl_Eph_An.cpp  Pl_Eph_An.h  PowSwingByInv.cpp  ZeroFinder.cpp  ZeroFinder.h  main.cpp  mga.cpp  mga.h  mga_dsm.cpp  mga_dsm.h  misc4Tandem.cpp  misc4Tandem.h  propagateKEP.cpp  propagateKEP.h  time2distance.cpp  time2distance.h  trajobjfuns.cpp  trajobjfuns.h
src/mantella_bindings/: PowSwingByInv.cpp  PowSwingByInv.hpp  astro_helpers.cpp  astro_helpers.hpp  gtoc1.cpp  gtoc1.hpp  helpers.cpp  helpers.hpp  lambert.cpp  lambert.hpp  main.cpp  vector3d_helpers.cpp  vector3d_helpers.hpp
